<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:layout_margin="10dip"
	android:background="@drawable/border"
	android:padding="20dip"
	tools:context=".TemperatureSampleActivity" >

	<TextView
		android:id="@+id/textView1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_alignParentTop="true"
		android:text="@string/hardware_watchdog_service"
		android:textAppearance="?android:attr/textAppearanceMedium" />
	
	<ImageButton
		android:id="@+id/hw_wd_service_help_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="7dip"
		android:layout_toEndOf="@+id/textView1"
		android:background="@null"
		android:src="@drawable/help_icon" 
	tools:ignore="ContentDescription" />

	<LinearLayout
		android:id="@+id/linearLayout1"
		android:layout_width="fill_parent"
		android:layout_height="1dip"
		android:layout_below="@+id/textView1"
		android:layout_marginTop="3dip"
		android:background="@color/white"
		android:orientation="horizontal" />

	<TextView
		android:id="@+id/hw_wd_status_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignStart="@+id/linearLayout1"
		android:layout_below="@+id/linearLayout1"
		android:layout_marginTop="5dip"
		android:text="@string/stopped" />

	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignStart="@+id/hw_wd_status_text"
		android:layout_below="@+id/hw_wd_status_text"
		android:layout_marginTop="11dip"
		android:text="@string/timeout"
		android:labelFor="@+id/timeout_text"/>
	
	<EditText
		android:id="@+id/timeout_text"
		android:layout_width="70dip"
		android:layout_height="wrap_content"
		android:layout_toEndOf="@+id/textView2"
		android:layout_below="@+id/hw_wd_status_text"
		android:layout_marginStart="10dip"
		android:layout_marginTop="3dip"
		android:ems="10"
		android:inputType="number"
		android:text="@string/default_timeout" />
	
	<TextView
		android:id="@+id/textView3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toEndOf="@+id/timeout_text"
		android:layout_below="@+id/hw_wd_status_text"
		android:layout_marginTop="11dip"
		android:layout_marginStart="10dip"
		android:text="@string/seconds" />

	<Button
		android:id="@+id/init_hw_wd_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/timeout_text"
		android:layout_marginTop="5dip"
		android:text="@string/init_hw_wd" />
	
	<TextView
		android:id="@+id/textView4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/init_hw_wd_button"
		android:text="@string/service_subscription"
		android:layout_marginTop="10dip"
		android:textAppearance="?android:attr/textAppearanceMedium" />
	
	<ImageButton
		android:id="@+id/watchdog_service_help_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="7dip"
		android:layout_marginTop="9dip"
		android:layout_below="@+id/init_hw_wd_button"
		android:layout_toEndOf="@+id/textView4"
		android:background="@null"
		android:src="@drawable/help_icon"
	tools:ignore="ContentDescription"/>
	
	<LinearLayout
		android:id="@+id/linearLayout2"
		android:layout_width="fill_parent"
		android:layout_height="1dip"
		android:layout_below="@+id/textView4"
		android:layout_marginTop="3dip"
		android:background="@color/white"
		android:orientation="horizontal" />
	
	<TextView
		android:id="@+id/subscribe_status_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/linearLayout2"
		android:layout_marginTop="5dip"
		android:text="@string/unsubscribed" />
	
	<TextView
		android:id="@+id/textView5"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/subscribe_status_text"
		android:layout_marginTop="11dip"
		android:text="@string/interval"
		android:labelFor="@+id/interval_text"/>
	
	<EditText
		android:id="@+id/interval_text"
		android:layout_width="100dip"
		android:layout_height="wrap_content"
		android:layout_toEndOf="@+id/textView5"
		android:layout_below="@+id/subscribe_status_text"
		android:layout_marginStart="10dip"
		android:layout_marginTop="3dip"
		android:ems="10"
		android:inputType="number"
		android:text="@string/default_interval" />
	
	<TextView
		android:id="@+id/textView6"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toEndOf="@+id/interval_text"
		android:layout_below="@+id/subscribe_status_text"
		android:layout_marginTop="11dip"
		android:layout_marginStart="10dip"
		android:text="@string/milliseconds" />
	
	<TextView
		android:id="@+id/textView7"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/textView5"
		android:layout_marginTop="11dip"
		android:text="@string/type" />
	
	<RadioButton 
		android:id="@+id/hw_wd_radio_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/textView5"
		android:layout_toEndOf="@+id/textView7"
		android:layout_marginTop="9dip"
		android:text="@string/hardware_watchdog"
		android:checked="false" />
	
	<RadioButton 
		android:id="@+id/sw_wd_radio_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/hw_wd_radio_button"
		android:layout_toEndOf="@+id/textView7"
		android:layout_marginTop="2dip"
		android:text="@string/software_watchdog"
		android:checked="true" />
	
	<ImageButton
		android:id="@+id/hw_wd_help_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="10dip"
		android:layout_marginTop="5dip"
		android:layout_alignTop="@+id/hw_wd_radio_button"
		android:layout_toEndOf="@+id/hw_wd_radio_button"
		android:background="@null"
		android:src="@drawable/help_icon"
	tools:ignore="ContentDescription"/>
	
	<ImageButton
		android:id="@+id/sw_wd_help_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignTop="@+id/sw_wd_radio_button"
		android:layout_alignStart="@+id/hw_wd_help_button"
		android:layout_toEndOf="@+id/sw_wd_radio_button"
		android:layout_marginTop="5dip"
		android:background="@null"
		android:src="@drawable/help_icon"
	tools:ignore="ContentDescription"/>
	
	<CheckBox 
		android:id="@+id/restart_application_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/sw_wd_radio_button"
		android:text="@string/restart_application"/>
	
	<Button
		android:id="@+id/subscribe_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/restart_application_button"
		android:layout_marginTop="5dip"
		android:text="@string/subscribe" />
	
	<Button
		android:id="@+id/unsubscribe_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/restart_application_button"
		android:layout_toEndOf="@+id/subscribe_button"
		android:layout_marginTop="5dip"
		android:text="@string/unsubscribe"
		android:enabled="false" />
	
	<LinearLayout 
		android:id="@+id/linearLayout3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_marginStart="50dip"
		android:layout_toEndOf="@+id/textView6"
		android:layout_below="@+id/linearLayout2" >
		
		<TextView
			android:id="@+id/report_failure_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dip"
			android:layout_marginStart="5dip"
			android:textColor="@color/white"
			android:textSize="18sp"
			android:text="@string/report_failure" />
		
		<ImageButton
			android:id="@+id/report_failure_button"
			android:layout_width="120dip"
			android:layout_height="120dip"
			android:layout_marginTop="5dip"
			android:scaleType="centerInside"
			android:src="@drawable/failure_image"
		tools:ignore="ContentDescription"/>
		
	</LinearLayout>

</RelativeLayout>